ETS-531 | add covid_id to error response and log errors (#184)
ETS-531 | add covid_id to error response and log errors
